# VisionPipeline-gallery-track

./: README.md  pyproject.toml
gallery_track/: __init__.py
gallery_track/cli/: __main__.py  build_gallery.py  export_reid.py  track_video.py
gallery_track/core/: __init__.py  device.py  io.py  normalize.py  pipeline.py  reid_registry.py  result.py  schema.py
gallery_track/tools/: build_gallery.py  reid_export.py
gallery_track/trackers/: __init__.py  base.py  gallery_hybrid.py  gallery_only.py
gallery_track/viz/: __init__.py  draw.py
