[project]
name = "track-lib"
version = "0.1.0"
description = "A modular video tracking + gallery ReID toolkit built on top of det-v1 detection outputs. This package is the second stage in the Vision Pipeline."
readme = "README.md"

authors = [
    { name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }
]
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "boxmot>=16.0.11",
    "pyqt5>=5.15.11",
]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gallery_track"]
